--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test1111",
+  "name": "vue3-reader-example-app",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "element-plus": "^2.2.25",
     "vue": "^3.2.45"
   },
   "devDependencies": {
@@ -21,6 +22,7 @@
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.3",
     "prettier": "^2.7.1",
+    "sass": "^1.56.1",
     "vite": "^3.2.4",
     "vitest": "^0.25.3"
   }
