--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "5.2.3",
     "element-plus": "^2.2.25",
     "vue": "^3.2.45"
   },
@@ -23,6 +25,7 @@
     "jsdom": "^20.0.3",
     "prettier": "^2.7.1",
     "sass": "^1.56.1",
+    "unplugin-element-plus": "^0.4.1",
     "vite": "^3.2.4",
     "vitest": "^0.25.3"
   }
