--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "5.2.3",
     "element-plus": "^2.2.25",
     "highlighter": "https://github.com/Aery3c/highlighter.git",
+    "pinia": "^2.0.27",
     "vue": "^3.2.45"
   },
   "devDependencies": {
