--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "5.2.3",
     "element-plus": "^2.2.25",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.27",
     "vue": "^3.2.45"
   },
