--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "axios": "^1.3.3",
+    "axios-mock-adapter": "^1.21.2",
     "bootstrap": "5.2.3",
     "element-plus": "^2.2.25",
+    "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "pinia": "^2.0.27",
     "vue": "^3.2.45"
